# nightmail

./: .gitignore  CLAUDE.md  README.md  pubspec.yaml  windows.dart
.github/workflows/: release.yml
android/app/: build.gradle.kts  proguard-rules.pro
assets/editor/: editor.html
docs/superpowers/reviews/: 2026-06-26-ai-followup-review.md  (+1 more)
ios/Runner/: AppDelegate.swift  Info.plist  SceneDelegate.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: injection_container.dart  main.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/packaging/: nightmail.desktop
linux/runner/: main.cc  my_application.cc
linux_plugin_stubs/flutter_inappwebview_linux/: pubspec.yaml
linux_plugin_stubs/flutter_inappwebview_linux/linux/: CMakeLists.txt  flutter_inappwebview_linux_plugin.cc
linux_plugin_stubs/flutter_inappwebview_linux/linux/include/flutter_inappwebview_linux/: flutter_inappwebview_linux_plugin.h
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
snap/: snapcraft.yaml
snap/gui/: nightmail.desktop
test/: widget_test.dart  widget_test.mocks.dart
web/: callback.html  index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp  win32_window.cpp  window_relay.cpp  window_relay.h
(+344 files in other folders)
