cmake_minimum_required(VERSION 3.14)
set(PROJECT_NAME "flutter_inappwebview_linux")
project(${PROJECT_NAME} LANGUAGES CXX)

cmake_policy(SET CMP0063 NEW)

set(PLUGIN_NAME "flutter_inappwebview_linux_plugin")

add_library(${PLUGIN_NAME} SHARED "flutter_inappwebview_linux_plugin.cc")
apply_standard_settings(${PLUGIN_NAME})
set_target_properties(${PLUGIN_NAME} PROPERTIES CXX_VISIBILITY_PRESET hidden)
target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
target_include_directories(${PLUGIN_NAME} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/include")

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK REQUIRED IMPORTED_TARGET gtk+-3.0)
target_link_libraries(${PLUGIN_NAME} PRIVATE flutter PkgConfig::GTK)

set(flutter_inappwebview_linux_bundled_libraries "" PARENT_SCOPE)
